--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "@types/node-fetch": "^2.1.4",
     "@types/react": "^16.7.13",
     "@types/react-dom": "^16.0.11",
+    "apollo-boost": "^0.4.3",
+    "apollo-server-lambda": "^2.8.1",
+    "encoding": "^0.1.12",
+    "graphql": "^14.4.2",
     "node-fetch": "^2.3.0",
     "react": "^16.8.0-alpha.0",
+    "react-apollo": "^3.0.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-scripts": "^2.1.1",
     "typescript": "^3.2.2"
